# mortygage_calculator

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  run_web.sh
.github/workflows/: ci.yml
mortgage_calculator/: constants.py  enums.py  mortgage_payments.py  validator.py  views.py
tests/mortgage_calculator/: test_mortgage_payments.py  test_validator.py  test_views.py
tests/mortgate_calculator/: test_mortgage_payments.py
